// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Empty tweet gives an alert error 1`] = `
<div
  className="form-inline align-items-center"
>
  <div
    className="form-row col-12"
  >
    <label
      className="sr-only"
      htmlFor="inlineFormInput"
    >
      New Tweet
    </label>
    <textarea
      className="form-control mb-2 col-11"
      id="inlineFormInput"
      onChange={[Function]}
      placeholder="What's going on?"
    />
    <button
      className="btn btn-primary mb-2 rounded col-1"
      onClick={[Function]}
      type="button"
    >
      Tweet
    </button>
  </div>
</div>
`;

exports[`Empty tweet gives an alert error 2`] = `
<div
  className="form-inline align-items-center"
>
  <div
    className="form-row col-12"
  >
    <label
      className="sr-only"
      htmlFor="inlineFormInput"
    >
      New Tweet
    </label>
    <textarea
      className="form-control mb-2 col-11"
      id="inlineFormInput"
      onChange={[Function]}
      placeholder="What's going on?"
    />
    <button
      className="btn btn-primary mb-2 rounded col-1"
      onClick={[Function]}
      type="button"
    >
      Tweet
    </button>
  </div>
  <div
    className="fade alert alert-info show"
    fade="false"
    role="alert"
  >
    Tweet can not be blank
  </div>
</div>
`;
